# rusty-audio

./: .dockerignore  .gitignore  AGENTS.md  AI_IMPLEMENTATION_GUIDE.md  API_SPECIFICATION.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_REVIEW_REPORT.md  ARCHITECTURE_SUMMARY.md  ASIO_INTEGRATION.md  ASIO_QUICK_START.md  AUDIO_BACKEND_ARCHITECTURE.md  BACKEND_ARCHITECTURE_DIAGRAMS.md  BROWSER_COMPATIBILITY.md  BROWSER_TESTING_GUIDE.md  BUILD_WINDOWS.md  BUNDLE_SIZE_ESTIMATE.md  CI_CD_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_WASM_COMPREHENSIVE.md  COMMIT_MESSAGE.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  COMPREHENSIVE_REVIEW_REPORT.md  CRITICAL_EVALUATION.md  CRITICAL_ISSUES_BLOCKING_MERGE.md  Cargo.toml  Cargo.toml.backup  CUsersdavidrusty-audioerrors.txt  CUsersdavidrusty-audiomissing_methods.txt  DEBUG_ANALYSIS_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_MULTITHREADED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.txt  DEPLOYMENT_VALIDATION_REPORT.md  DEPLOYMENT_VERIFIED.md  (+125 more)
.ast-grep/: panic-detection.yml  sgconfig.yml
.cargo/: clippy.toml  config.toml  config.toml.threading-backup  sccache-config.toml
.claude/: settings.local.json
.context/: CONTEXT_SUMMARY.txt  PROJECT_CONTEXT.md  agent_memory.json  quick_reference.md
.gemini/: GEMINI.md
.taskmaster/: state.json
.taskmaster/docs/: PROJECT_CONTEXT.md  prd.txt
.taskmaster/tasks/: tasks.json
asiosdk/AsioSDK/: AsioSDK.aps  AsioSDK.sln  AsioSDK.vcxproj  AsioSDK.vcxproj.filters  Class.cpp  Class.h  Class.idl  readme.txt  resource.h
assets/: rusty-audio.manifest
benches/: audio_benchmarks.rs  audio_quality_benchmarks.rs  memory_benchmarks.rs  optimization_benchmarks.rs  performance_benchmarks.rs  realtime_benchmarks.rs  simd_benchmarks.rs
docs/: BUILD_OPTIMIZATION.md  OAUTH_FLOW_DOCUMENTATION.md  OAUTH_IMPLEMENTATION_README.md  OAUTH_TESTING_CHECKLIST.md  PERFORMANCE_BASELINE.md  PROFILING_GUIDE.md  SECURITY_BEST_PRACTICES.md  SIMD_OPTIMIZATION_GUIDE.md
examples/: mathematical_testing_demo.rs
rusty-audio-core/: Cargo.toml
rusty-audio-core/src/: audio_engine.rs  audio_performance_optimized.rs  audio_pipeline_integration.rs  error.rs  integrated_audio_manager.rs  lib.rs  metadata.rs  wasm_panic_handler.rs  web.rs  web_refactored.rs
rusty-audio-core/src/ai/: adaptive_ui.rs  audio_analyzer.rs  mod.rs  noise_reduction.rs  preset_recommender.rs
rusty-audio-core/src/audio/: asio_backend.rs  backend.rs  backend_selector.rs  device.rs  device_destination.rs  device_source.rs  hybrid.rs  manager.rs  mmcss.rs  mod.rs  recorder.rs  router.rs  wasm_processing.rs  wasm_processing_refactored.rs  web_audio_backend.rs  web_audio_destination.rs  web_bridge.rs
rusty-audio-core/src/security/: audio_safety.rs  file_validator.rs  secure_config.rs  thread_safe_state.rs
rusty-audio-core/src/testing/: audio_feature_tests.rs  equalizer_tests.rs  signal_generators.rs  ui_tests.rs  visual_regression.rs
rusty-audio-core/src/ui/: accessibility.rs  dock_layout.rs  error_handling.rs  layout.rs  recording_panel.rs  signal_generator.rs  theme.rs
rusty-audio-desktop/: Cargo.toml
rusty-audio-desktop/benches/: audio_quality_benchmarks.rs  bottleneck_benchmarks.rs  memory_benchmarks.rs  performance_benchmarks.rs  realtime_benchmarks.rs  simd_benchmarks.rs
rusty-audio-desktop/src/: main.rs  panel_implementation.rs
rusty-audio-web/: Cargo.toml
rusty-audio-web/.cargo/: config.toml
rusty-audio-web/src/: lib.rs  wasm_app.rs  web_storage.rs
rusty-audio-web/src/auth/: mod.rs  oauth_client.rs  providers.rs  session.rs  token_storage.rs
scripts/: bench-desktop.sh  bench-wasm.sh  build-and-serve.ps1  build-and-serve.sh  build-pgo.ps1  build-pgo.sh  build-wasm.sh  compare-benchmarks.sh  compress-assets.js  deploy-feature-flags.sh  deploy-pwa-cdn.sh  deploy-wasm.sh  dev-server.js  generate-icons.sh  health-check.js  install-dev-env.sh  package-linux.sh  package-macos.sh  package-windows.ps1  performance_monitor.py  release.sh  run_tests.ps1  run_ui_tests.rs  setup-monitoring.sh  setup-profiling.sh  setup-sccache-windows.ps1  setup-verify.js  test-threading.js  validate-build.js  verify-pwa-setup.sh
src/: async_audio_loader.rs  audio_engine.rs  audio_optimizations.rs  audio_performance.rs  audio_performance_integration.rs  audio_performance_optimized.rs  audio_pipeline_integration.rs  error.rs  integrated_audio_manager.rs  lib.rs  main.rs  main.rs.backup  metadata.rs  panel_implementation.rs  performance_monitor.rs  platform.rs  property_tests.rs  signal_generators.rs  ui_extensions.rs  web.rs  web_refactored.rs
src/ai/: adaptive_ui.rs  anomaly_detector.rs  audio_analyzer.rs  audio_classifier.rs  eq_optimizer.rs  feature_extractor.rs  format_optimizer.rs  ml_models.rs  mod.rs  noise_reduction.rs  playlist_generator.rs  preset_recommender.rs  voice_commands.rs  (+1 more)
static/: _headers  auth-callback.html  generate-test-report.js  landing.html  manifest.webmanifest  rusty-audio-init.js  service-worker-refactored.js  service-worker.js  test-frontend.html  test-threading.html  wasm-worker-init-refactored.js  wasm-worker-init.js
tests/: .gitignore  INTEGRATION_EXAMPLES.md  QUICK_START.md  README.md  TEST_SUITE_SUMMARY.md  WASM_TEST_SUITE_GUIDE.md  audio_backend_tests.rs  audio_graph_integration_tests.rs  backend_trait_tests.rs  comprehensive_unit_tests.rs  egui_kittest_tests.rs  eq_functionality_tests.rs  integration.rs  integration_test.rs  localhost_integration.rs  mathematical_framework_tests.rs  native_audio_tests.rs  package.json  pipeline_integration_tests.rs  platform_specific_tests.rs  property_based_tests.rs  regression_tests.rs  run-all-tests.ps1  run-all-tests.sh  run-tests.ps1  run-tests.sh  safety_protection_tests.rs  theme_system_tests.rs  ui_component_tests.rs  wasm_audio_context_tests.rs  wasm_memory_management_tests.rs  wasm_p0_fixes_tests.rs  wasm_panic_boundary_tests.rs  wasm_shared_audio_buffer_tests.rs  wasm_worker_pool_tests.rs
www/: README.md  index.html  manifest.json  sw.js
(+149 files in other folders)
