# This file defines the project metadata and dependencies for our Rust application.
# Cargo, Rust's build tool and package manager, reads this file to understand
# how to compile and run the project.

[package]
name = "rusty-audio"
version = "0.1.0"
edition = "2021"
description = "A car-stereo-style audio player built with Rust and egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio-optimizations"]
audio-optimizations = []  # Enable real-time audio thread priority and CPU pinning

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_dock = "0.18"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.14.1"
web-audio-api = { version = "1.2.0", features = ["default"] }
parking_lot = "0.12.3"
lofty = "0.22.4"
image = "0.25.8"
# catppuccin-egui = { version = "5.6.0", default-features = false }  # TODO: Re-enable when egui 0.33 support is added
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
num_cpus = "1.16"
rand = "0.8"
rustfft = "6.0"
proptest = "1.0"
quickcheck = "1.0"
num-complex = "0.4.4"
approx = "0.5.1"
lru = "0.12"
rayon = "1.10"
sys-info = "0.9"

# Async runtime for non-blocking file I/O
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# ML and AI libraries (optional - enable as needed)
# candle-core = { version = "0.4", optional = true }
# candle-nn = { version = "0.4", optional = true }
# linfa = { version = "0.7", optional = true }
# smartcore = { version = "0.3", optional = true }
ndarray = "0.15"
# rubato = { version = "0.15", optional = true }

# Performance optimizations
realfft = "3.3"        # Faster FFT for spectrum analysis
memmap2 = "0.9"        # Memory-mapped file I/O

# Phase 3: Native audio backend dependencies
cpal = { version = "0.15", features = [] }           # Cross-platform audio I/O
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis", "flac", "mp3"] }
symphonia = { version = "0.5", features = ["all", "opt-simd"] }  # Professional audio decoding
rubato = "0.15"                                      # Sample rate conversion
midir = "0.9"                                        # Cross-platform MIDI I/O
wmidi = "4.0"                                        # MIDI message parsing
hound = "3.5"                                         # WAV file I/O for recording

# Additional utilities for AI
statrs = "0.16"

# Security dependencies
toml = "0.8"
dirs = "5.0"
tempfile = "3.8"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
bytes = "1.0"
rstest = "0.18"
test-case = "3.2"
quickcheck_macros = "1.0"
serial_test = "3.0"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
egui_kittest = "0.33.1"  # UI testing framework for egui 0.33

[profile.release]
opt-level = 3
lto = "fat"              # Fat LTO for maximum optimization
codegen-units = 1        # Single codegen unit for best optimization
panic = "abort"          # Smaller binary, faster panic
strip = true             # Strip debug symbols
overflow-checks = false  # Disable overflow checks in release

[profile.bench]
inherits = "release"

# Profile-Guided Optimization (PGO) profiles
[profile.pgo-instrument]
inherits = "release"
# Enable instrumentation for PGO data collection

[profile.pgo-use]
inherits = "release"
# Use PGO data for optimized build

[[bench]]
name = "audio_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[example]]
name = "mathematical_testing_demo"
path = "examples/mathematical_testing_demo.rs"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
