# Rusty Audio Workspace
# Unified workspace for desktop and WASM applications with shared core library

[workspace]
members = [
    "rusty-audio-core",
    "rusty-audio-desktop",
    "rusty-audio-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rusty Audio Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# GUI Framework
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false }
egui_dock = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and Tracing
log = "0.4"
tracing = "0.1"

# Synchronization
parking_lot = "0.12.3"

# Audio Processing
rustfft = "6.0"
realfft = "3.3"
num-complex = "0.4.4"

# Math and ML
ndarray = "0.15"
statrs = "0.16"
approx = "0.5.1"

# Utilities
cfg-if = "1.0"
rand = "0.8"
num_cpus = "1.16"
lru = "0.12"
rayon = "1.10"
chrono = "0.4"
dirs = "5.0"
toml = "0.8"

# Image processing
image = "0.25.8"

# Metadata
lofty = "0.22.4"

# Native-only dependencies
cpal = { version = "0.15" }
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis", "flac", "mp3"] }
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
rubato = "0.15"
midir = "0.9"
wmidi = "4.0"
hound = "3.5"
rfd = "0.14.1"
web-audio-api = { version = "1.2.0", features = ["default"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
memmap2 = "0.9"
tempfile = "3.8"

# WASM-only dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3" }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen-rayon = "1.2"
once_cell = "1.19"
wgpu = { version = "27" }

# OAuth and Authentication (WASM)
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"

# Windows-specific
windows = { version = "0.58" }
libc = "0.2"

# Testing
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
bytes = "1.0"
rstest = "0.18"
test-case = "3.2"
serial_test = "3.0"
tokio-test = "0.4"
clap = { version = "4.0", features = ["derive"] }
egui_kittest = "0.33.1"
dhat = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.bench]
inherits = "release"

[profile.wasm-release]
inherits = "release"
lto = false

[profile.pgo-instrument]
inherits = "release"

[profile.pgo-use]
inherits = "release"
